--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <!-- Project from https://start.vaadin.com/project/2e666a50-b763-4aaf-af7f-329cc644026b -->
     <groupId>com.example.application</groupId>
     <artifactId>flowcrmtutorial</artifactId>
-    <name>Flow CRM Tutorial</name>
+    <name>Flow CRM</name>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
